--- a/ConsoleDataVisualiser/ConsoleDataVisualiser.csproj
+++ b/ConsoleDataVisualiser/ConsoleDataVisualiser.csproj
@@ -12,6 +12,7 @@
     <PackageTags>data, console, visualise, table, print</PackageTags>
     <NeutralLanguage></NeutralLanguage>
     <Company />
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
